Avoid body background color flickering

--- a/main.css
+++ b/main.css
@@ -1,10 +1,3 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background: #333;
-}
-
 .game-container {
     display: flex;
     flex-direction: column;
